--- a/start/01-04-nesting-elements.html
+++ b/start/01-04-nesting-elements.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,12 @@
 </head>
 
 <body>
-
+  <div>
+    <img src="../assets/richard-klein.png" />
+    <h3>Richard Klein</h3>
+    <p><a href="https://maps.app.goo.gl/kSPZMv3jzQP16e1A9">Gothenburg</a>, Sweden</p>
+    <button>Add Friend</button>
+  </div>
 </body>
 
 </html>
