module 4 - code written by me for tests and checked against videos

--- a/start/04-03-create-an-office-hours-schedule.html
+++ b/start/04-03-create-an-office-hours-schedule.html
@@ -9,7 +9,60 @@
 </head>
 
 <body>
-  
+  <table>
+    <thead>
+      <tr>
+        <td></td>
+        <th scope="col">Monday</th>
+        <th scope="col">Tuesday</th>
+        <th scope="col">Wednesday</th>
+        <th scope="col">Thursday</th>
+        <th scope="col">Friday</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">9:00 to 11:00</th>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+      </tr>
+      <tr>
+        <th scope="row">1:00 to 12:00</th>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Open</td>
+      </tr>
+      <tr>
+        <th scope="row">12:00 to 14:00</th>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+      </tr>
+      <tr>
+        <th scope="row">14:00 to 16:00</th>
+        <td>Open</td>
+        <td>Open</td>
+        <td>Open</td>
+        <td>Open</td>
+        <td>Closed</td>
+      </tr>
+      <tr>
+        <th scope="row">16:00 to 18:00</th>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Closed</td>
+        <td>Open</td>
+        <td>Closed</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
