--- a/start/04-01-create-a-blog-post-list.html
+++ b/start/04-01-create-a-blog-post-list.html
@@ -10,20 +10,35 @@
 
 <body>
   <!-- Text: -->
-  The Art Of Growing Sunflowers - Why It's Not As Easy As You Might Think
-  Known as one of the happiest flowers, sunflowers seem like they'd be easy to grow...or do they.
-  Gardening
-  5 min read
-
-  4 Ways I've Made Extra Income To Pay Off My Mortgage
-  It's not an easy path, but the road to financial freedom sure is worth it.
-  Finance
-  8 min read
-
-  How To Travel The World Full Time On A Budget
-  Tips on how you can travel for cheap and experience the world.
-  Travel
-  4 min read
+  <div>
+    <div>
+      <h2>The Art Of Growing Sunflowers - Why It's Not As Easy As You Might Think</h2>
+      <p>Known as one of the happiest flowers, sunflowers seem like they'd be easy to grow...or do they.</p>
+      <span>Gardening</span>
+      <span>5 min read</span>
+    </div>
+    <img src="../assets/flowers.png" alt="A yellow flower and purple flower surrounded by other pink and yellow flowers.">
+  </div>
+  
+  <div>
+    <div>
+      <h2>4 Ways I've Made Extra Income To Pay Off My Mortgage</h2>
+      <p>It's not an easy path, but the road to financial freedom sure is worth it.</p>
+      <span>Finance</span>
+      <span>8 min read</span>
+    </div>
+    <img src="../assets/apartment.png" src="An apartment view from outside.">
+  </div>
+  
+  <div>
+    <div>
+      <h2>How To Travel The World Full Time On A Budget</h2>
+      <p>Tips on how you can travel for cheap and experience the world.</p>
+      <span>Travel</span>
+      <span>4 min read</span>
+    </div>
+    <img src="../assets/traveling.png" src="A woman in a train station with a backpack and coffee.">
+  </div>
 
 </body>
 
