--- a/start/04-04-create-a-flower-delivery-service.html
+++ b/start/04-04-create-a-flower-delivery-service.html
@@ -9,7 +9,47 @@
 </head>
 
 <body>
-  
+  <form action="">
+    <!-- contact -->
+    <div>
+      <!-- recipient details -->
+      <div>
+        <h2>Recipient details</h2>
+        <label for="recipient-name">Full name</label> <br>
+        <input type="text" id="recipient-name"> <br>
+
+        <label for="recipient-telephone">Telephone Number</label> <br>
+        <input type="tel" id="recipient-telephone"> <br>
+
+        <label for="recipient-address">Address</label> <br>
+        <input type="text" id="recipient-address"> <br>
+      </div>
+      <!-- sender details -->
+      <div>
+        <h2>Sender details</h2>
+        <label for="sender-name">Full name</label> <br>
+        <input type="text" id="sender-name"> <br>
+
+        <label for="sender-email">Email Address</label> <br>
+        <input type="email" id="sender-email"> <br>
+      </div>
+    </div>
+    <!-- order -->
+    <div>
+      <h2>Order</h2>
+      <label for="bouquet-select">Bouquet Type</label>
+      <select name="bouquet-type" id="bouquet-select">
+        <option value="basic">Basic Bouquet - $24.99</option>
+        <option value="premium">Premium Bouquet - $49.99</option>
+        <option value="premium-plus">Premium Bouquet + Chocolate - $69.99</option>
+      </select> <br>
+
+      <label for="message-textarea">Message</label>
+      <textarea name="message" id="message-textarea"></textarea> <br>
+
+      <button type="submit">Checkout</button>
+    </div>
+  </form>
 </body>
 
 </html>
