module 5 dom and dynamic dom nodes

--- a/start/05-01-the-dom.html
+++ b/start/05-01-the-dom.html
@@ -20,7 +20,12 @@
   </header>
   
   <script>
-    
+    const header = document.querySelector('#header');
+    const nav = header.childNodes[1];
+    const list = nav.childNodes[1];
+    const firstList = list.childNodes[1];
+    const firstLink = firstList.childNodes[0];
+    console.log(firstLink.childNodes);
   </script>
 </body>
 
